footer readability fix

--- a/src/components/Footer/Footer.sass
+++ b/src/components/Footer/Footer.sass
@@ -6,28 +6,29 @@
   height: auto
   display: flex
   justify-content: space-between
+  font-size: 2rem
 
   > *
     height: 100%
     align-self: center
   
-  @media ( max-width: 45rem ) 
+  @media ( max-width: 48rem ) 
     flex-direction: column
+    font-size: 1.5rem
 
   .icon-link-block
     > a.icon-link
       > img
+        @include active-item()
         margin: 1rem
         height: 3rem
         filter: invert(1)
-        @include active-item()
 
   .email-block
     > label
+      @include active-item()
       display: block
       margin: 0.5rem
       line-height: 4rem
-      font-size: 2rem
       height: 4rem
       color: $clr-light
-      @include active-item()
